Fix Css on collapse and property

--- a/src/components/styles/Collapse.scss
+++ b/src/components/styles/Collapse.scss
@@ -15,6 +15,9 @@
   max-width: 1023px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and(min-width: $bp-desktop) {
+    margin-top: 26px;
+  }
   &-title {
     position: relative;
     z-index: 1;
